test: ajout des tests unitaires pour les controllers et mappers - Mise en place des tests unitaires pour les contrôleurs REST et les mappers. - Ajout de la dépendance `spring-boot-starter-test` (version 3.3.3) dans le fichier `pom.xml` pour faciliter l'écriture et l'exécution des tests.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Boot Starter Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.3.3</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
         <!-- Logging (optionnel, mais recommandé) -->
